[gd_scene load_steps=5 format=3 uid="uid://cr3f307xa3bfq"]

[ext_resource type="Script" path="res://UI/Scripts/menuButtons.gd" id="1_f280e"]
[ext_resource type="AudioStream" uid="uid://i110wvyrwdut" path="res://Sounds/menu_sfx1.mp3" id="2_4jtvh"]
[ext_resource type="Script" path="res://UI/Scripts/parametersMenu.gd" id="2_yptuk"]
[ext_resource type="AudioStream" uid="uid://bjiv6l1vhrmuf" path="res://Sounds/menu_sfx2.mp3" id="3_qy6hr"]

[node name="InGameUI" type="Node2D"]
process_mode = 2

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.866667, 0.219608, 0.815686, 0.356863)

[node name="MarginContainer" type="MarginContainer" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -344.0
offset_top = -87.155
offset_right = 75.0
offset_bottom = 13.845
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.64, 1.64)

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ColorRect/MarginContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="Control/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="ResetButton" type="Button" parent="Control/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Reset"
script = ExtResource("1_f280e")

[node name="sfx1" type="AudioStreamPlayer" parent="Control/ColorRect/MarginContainer/VBoxContainer/ResetButton"]
stream = ExtResource("2_4jtvh")

[node name="sfx2" type="AudioStreamPlayer" parent="Control/ColorRect/MarginContainer/VBoxContainer/ResetButton"]
stream = ExtResource("3_qy6hr")

[node name="ParametersButton" type="Button" parent="Control/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Parameters"

[node name="QuitButton" type="Button" parent="Control/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/ColorRect/MarginContainer"]
visible = false
layout_mode = 2
script = ExtResource("2_yptuk")

[node name="sfx2" type="AudioStreamPlayer" parent="Control/ColorRect/MarginContainer/VBoxContainer2"]
stream = ExtResource("3_qy6hr")

[node name="Label" type="Label" parent="Control/ColorRect/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Head rotation angle :"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="Control/ColorRect/MarginContainer/VBoxContainer2"]
layout_mode = 2
min_value = 1.0
value = 1.0

[node name="Label2" type="Label" parent="Control/ColorRect/MarginContainer/VBoxContainer2"]
layout_mode = 2
horizontal_alignment = 1

[node name="LabelPlayerSpeed" type="Label" parent="Control/ColorRect/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "-----"

[node name="HSliderPlayerSpeed" type="HSlider" parent="Control/ColorRect/MarginContainer/VBoxContainer2"]
layout_mode = 2
min_value = 3.0
max_value = 10.0
step = 0.1
value = 3.0

[node name="CheckBox" type="CheckBox" parent="Control/ColorRect/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Smooth head mode (In progress)"
alignment = 1
language = "en"

[node name="Label3" type="Label" parent="Control/ColorRect/MarginContainer/VBoxContainer2"]
layout_mode = 2
horizontal_alignment = 1

[node name="MainHandCheckBox" type="CheckBox" parent="Control/ColorRect/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Main hand : Right"

[node name="ReturnButton" type="Button" parent="Control/ColorRect/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Return"

[node name="sfx1" type="AudioStreamPlayer" parent="Control/ColorRect/MarginContainer/VBoxContainer2"]
stream = ExtResource("2_4jtvh")

[node name="sfx3" type="AudioStreamPlayer" parent="Control/ColorRect/MarginContainer/VBoxContainer2"]
stream = ExtResource("2_4jtvh")

[connection signal="pressed" from="Control/ColorRect/MarginContainer/VBoxContainer/ResumeButton" to="Control/ColorRect/MarginContainer/VBoxContainer/ResetButton" method="_on_resume_button_pressed"]
[connection signal="pressed" from="Control/ColorRect/MarginContainer/VBoxContainer/ResetButton" to="Control/ColorRect/MarginContainer/VBoxContainer/ResetButton" method="_on_reset_button_pressed"]
[connection signal="pressed" from="Control/ColorRect/MarginContainer/VBoxContainer/ParametersButton" to="Control/ColorRect/MarginContainer/VBoxContainer/ResetButton" method="_on_parameters_button_pressed"]
[connection signal="pressed" from="Control/ColorRect/MarginContainer/VBoxContainer/QuitButton" to="Control/ColorRect/MarginContainer/VBoxContainer/ResetButton" method="_on_quit_button_pressed"]
[connection signal="drag_ended" from="Control/ColorRect/MarginContainer/VBoxContainer2/HSlider" to="Control/ColorRect/MarginContainer/VBoxContainer2" method="_on_h_slider_drag_ended"]
[connection signal="drag_ended" from="Control/ColorRect/MarginContainer/VBoxContainer2/HSliderPlayerSpeed" to="Control/ColorRect/MarginContainer/VBoxContainer2" method="_on_h_slider_player_speed_drag_ended"]
[connection signal="pressed" from="Control/ColorRect/MarginContainer/VBoxContainer2/CheckBox" to="Control/ColorRect/MarginContainer/VBoxContainer2" method="_on_check_box_pressed"]
[connection signal="pressed" from="Control/ColorRect/MarginContainer/VBoxContainer2/MainHandCheckBox" to="Control/ColorRect/MarginContainer/VBoxContainer2" method="_on_main_hand_check_box_pressed"]
[connection signal="pressed" from="Control/ColorRect/MarginContainer/VBoxContainer2/ReturnButton" to="Control/ColorRect/MarginContainer/VBoxContainer2" method="_on_return_button_pressed"]
